# axum-postgres-polars

./: .env  Cargo.toml  README.md  docker-compose.yaml
.sqlx/: query-9ba3615aa8e6f4fa9cef97a460d24bcbf356b5f02cd4295f7f5d2c5e7cfe40f5.json  query-a198a6ff43e9188a0d8204f68d832750e43c6e6067066e8294de9164661afd22.json
migrations/: 20241210214028_add_boat.sql
src/: config.rs  db.rs  lib.rs  main.rs  model.rs  routes.rs
tests/: api.rs
