[package]
name = "axum-postgres-polars"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
thiserror = "2.0.6"
tokio = "1.42.0"

[dev-dependencies]
testcontainers-modules = { version = "0.11.4", features = [
    "postgres",
    "blocking",
] }
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
