[package]
name = "axum-postgres-polars"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
futures = "0.3"
polars = "0.45"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
testcontainers-modules = { version = "0.11", features = ["postgres"] }
reqwest = { version = "0.12", features = ["json"] }
